--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8181
 spring:
   cloud:
     gateway:
@@ -18,6 +20,11 @@ spring:
         id: discovery-server-static
         uri: http://localhost:8761
         predicates[0]: Path=/eureka/**
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/spring-boot-microservice
   application:
     name: api-gateway
 logging:
@@ -28,4 +35,5 @@ logging:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka:password@localhost:8761/eureka
+
