--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -4,6 +4,8 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+  username: ${EUREKA_USERNAME:eureka}
+  password: ${EUREKA_PASSWORD:password}
 
 server:
   port: 8761
