--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -27,6 +27,11 @@ spring:
           issuer-uri: http://localhost:8080/realms/spring-boot-microservice
   application:
     name: api-gateway
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
 logging:
   level:
     org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: INFO
